--- a/template/pages/@/layout/footer.ejs
+++ b/template/pages/@/layout/footer.ejs
@@ -189,7 +189,7 @@ const themeCustom = _.settings.theme.custom || ''
                 <div class="collapse" id="footer-categories">
                   <% if (footer.links_2.list_categories) { %>
                     <ul class="footer__links">
-                      <% _.categories.slice(0,3).forEach(({ name, slug, parent }) => { %>
+                      <% _.categories.forEach(({ name, slug, parent }) => { %>
                         <% if (!parent) { %>
                           <li>
                             <i class="i-chevron-right"></i>
