--- a/template/pages/@/sections/blog.ejs
+++ b/template/pages/@/sections/blog.ejs
@@ -5,7 +5,16 @@ if (Array.isArray(posts) && posts.length) {
   %>
     <div class="blog my-4 my-lg-5">
       <div class="container">
-        <div class="row">
+        <h4 class="products-carousel__title">
+          
+            
+              <a href="/blog">
+                Blog
+              </a>
+            
+          
+        </h4>
+        <div class="row mt-3 px-3">
           <%
           const postsList = []
           posts.forEach(slug => { 
@@ -40,19 +49,11 @@ if (Array.isArray(posts) && posts.length) {
                       <%= title %>
                     </a>
                   </h5>
-                  <% if(themeCustom === 'ecom-beauty') { %>
-                    <a
-                      href="/posts/<%= slug %>"
-                      class="blog-post-link"
-                    >
-                      <%- _.dictionary('seeMore') %>
-                      <i class="i-chevron-right"></i>
-                    </a>
-                  <% } else { %>
+                  
                     <p class="card-text">
                       <%= description %>
                     </p>
-                  <% } %>
+                  
                 </div>
               </div>
             </div>
