search console apx

--- a/template/pages/@/meta.ejs
+++ b/template/pages/@/meta.ejs
@@ -165,3 +165,5 @@ if (pathname) {
 
 <meta name="ecom-store-id" content="<%= _.storeId %>">
 <meta name="views-v" content="1.3.0">
+
+<meta name="google-site-verification" content="vpK82PkQCQdArAtdyKmzEyMKZugZtrmrHE-_wn6a61k" />
